<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="EmptyDealsItemViewModelBinding">

        <variable
            name="emptyDealViewModel"
            type="com.puneet.foodie.ui.landing.EmptyItemViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewEmpty"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_rabbit" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/empty_screen"
            android:textColor="@color/grey3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/please_retry"
            android:textColor="@color/grey3" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:onClick="@{() -> emptyDealViewModel.onRetryClick()}"
            android:text="@string/retry"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

</layout>