<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <data class="DealDetailBinding">
        <import type="android.view.View" />
        <variable
            name="dealDetailViewModel"
            type="com.puneet.foodie.ui.deals.DealDetailViewModel" />

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/clRootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:elevation="5dp">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        style="@style/Toolbar"
                        app:subtitleTextColor="@color/white"
                        app:title="@string/app_name"
                        app:titleTextColor="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey1" />

                </android.support.design.widget.AppBarLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ScrollView
                        android:id="@+id/scrollView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/dp_300">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/product_image"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/dp_300"
                                android:layout_weight="1"
                                android:padding="@dimen/dp_15"
                                app:imageUrl="@{dealDetailViewModel.imageUrl}"
                                />

                            <TextView
                                android:id="@+id/salePrice_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_below="@+id/product_image"
                                android:layout_marginLeft="@dimen/dp_10"
                                android:layout_marginStart="@dimen/dp_10"
                                android:fontFamily="@font/droid_serif"
                                android:freezesText="true"
                                android:padding="@dimen/dp_5"
                                android:text="@{dealDetailViewModel.mSalesPrice}"
                                android:textColor="@color/red_dark" />

                            <TextView
                                android:id="@+id/price_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignTop="@+id/salePrice_txt"
                                android:layout_marginEnd="@dimen/dp_20"
                                android:layout_marginRight="@dimen/dp_20"
                                android:fontFamily="@font/droid_serif"
                                android:padding="@dimen/dp_5"
                                android:text="@{dealDetailViewModel.mPrice}"
                                android:textColor="@color/grey2"
                                android:textSize="@dimen/sp_16" />

                            <TextView
                                android:id="@+id/title_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@+id/salePrice_txt"
                                android:layout_alignStart="@+id/salePrice_txt"
                                android:layout_below="@+id/salePrice_txt"
                                android:fontFamily="@font/abel"
                                android:padding="@dimen/dp_5"
                                android:text="@{dealDetailViewModel.mTitle}"
                                android:textColor="@color/grey3"
                                android:textSize="@dimen/sp_18" />

                            <TextView
                                android:id="@+id/desc_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@+id/salePrice_txt"
                                android:layout_alignStart="@+id/salePrice_txt"
                                android:layout_below="@+id/title_txt"
                                android:focusableInTouchMode="true"
                                android:fontFamily="@font/abel"
                                android:padding="@dimen/dp_5"
                                android:text="@{dealDetailViewModel.mDescription}"
                                android:textColor="@color/black"
                                android:textSize="@dimen/sp_16" />
                        </RelativeLayout>
                    </ScrollView>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:layout_below="@+id/scrollView"

                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true">
                        <Button
                            android:padding="@dimen/dp_5"
                            android:layout_weight="1"
                            android:id="@+id/add_to_list"
                            android:background="@color/grey1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> dealDetailViewModel.onAddToList()}"
                            android:text="@string/add_to_list" />

                        <Button
                            android:padding="@dimen/dp_5"
                            android:layout_weight="1"
                            android:id="@+id/add_to_cart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/red_dark"
                            android:textColor="@color/white"
                            android:onClick="@{() -> dealDetailViewModel.onAddToCart()}"
                            android:text="@string/add_to_cart" />
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
        </android.support.design.widget.CoordinatorLayout>


        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{dealDetailViewModel.isLoading ? View.VISIBLE : View.GONE}" />
    </FrameLayout>
</layout>